# shelf-sense-ai

./: .env.example  .gitignore  Dockerfile  Dockerfile.space  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_fuzzy.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/: BookCard.jsx  ChatInterface.jsx  DetectionResults.jsx  ImageUploader.jsx  Layout.jsx  PrivateRoute.jsx
frontend/src/pages/: AnalyticsPage.jsx  BookDetailPage.jsx  ChatPage.jsx  HomePage.jsx  LibraryPage.jsx  LoginPage.jsx  ScanPage.jsx  SignupPage.jsx
frontend/src/services/: api.js
frontend/src/styles/: index.css
nginx/: nginx.conf
scripts/: debug_ocr_quality.py  init-db.sql  list_google_models.py  test_detection.py  test_identification.py  train_spines.py  validate.py
shelfsense/: __init__.py  security.py
shelfsense/api/: __init__.py  dependencies.py  main.py  schemas.py
shelfsense/api/middleware/: __init__.py  cors.py  error_handler.py  logging.py  rate_limit.py
shelfsense/api/routes/: __init__.py  auth.py  (+4 more)
shelfsense/embeddings/: __init__.py  cache.py  fusion.py  text_embedder.py  visual_embedder.py
shelfsense/evaluation/: __init__.py  benchmark.py  detection_benchmark.py  matching_benchmark.py  metrics.py  ocr_benchmark.py  rag_benchmark.py
shelfsense/identification/: __init__.py  candidate_ranker.py  google_books.py  matcher.py  metadata_enricher.py  service.py
shelfsense/intelligence/: __init__.py  diversity_metrics.py  genre_analyzer.py  recommender.py
shelfsense/ocr/: __init__.py  confidence_estimator.py  ocr_engine.py  text_normalizer.py
shelfsense/rag/: __init__.py  conversation.py  generator.py  prompts.py  retriever.py
shelfsense/storage/: __init__.py  book_repository.py  hybrid_retriever.py  models.py  vector_store.py
shelfsense/vision/: __init__.py  cover_detector.py  detector_ensemble.py  layout_classifier.py  preprocessing.py  roi_extractor.py  spine_detector.py
tests/: __init__.py  conftest.py
tests/integration/: test_api.py
tests/unit/: test_ocr.py  test_vision.py
